--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="top center">
-        <h1 class=" text text_1">Добро пожаловать на мой сайт!</h1>
+        <h1 class="text text_1">Добро пожаловать на мой сайт!</h1>
         <h3 class="motto motto_1">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и <b>приступай</b></h3>
         <div class="press_around"><button class="press" type="submit">Поехали!</button></div>
     </div>
     <div class="for_box center">
         <div class="for">
-          <div class="for_item for_item1">Игра 1</div>
-          <div class="for_item for_item2">Игра 2</div>
-          <div class="for_item for_item3">Игра 3</div>
+          <a class="for_item for_item1" href="index.html">Игра 1</a>
+          <a class="for_item for_item2" href="index.html">Игра 2</a>
+          <a class="for_item for_item3" href="index.html">Игра 3</a>
         </div>
     </div>
 </body>
