--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
           <a class="for_item for_item3" href="index.html">Игра 3</a>
         </div>
     </div>
+    <script src="./hw-2.js"></script>
 </body>
 </html>
