--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <div class="top center">
-        <h1 class="text text_1">Добро пожаловать на мой сайт!</h1>
-        <h3 class="motto motto_1">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и <b>приступай</b></h3>
-        <div class="press_around"><button class="press" type="submit">Поехали!</button></div>
+        <div class="titul">
+            <h1 class="text text_1">Добро пожаловать на мой сайт!</h1>
+            <h3 class="motto motto_1">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и <b>приступай</b></h3>
+            <div class="press_around"><button class="press" type="submit">Поехали!</button></div>
+        </div>
     </div>
     <div class="for_box center">
         <div class="for">
