--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     </div>
     <script src="./hw-2.js"></script>
     <script src="./hw-3.js"></script>
+    <script src="./hw-4.js"></script>
 </body>
 </html>
