--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
           <a class="for_item for_item2" href="index.html">Игра 2</a>
           <a class="for_item for_item3" href="index.html">Игра 3</a>
         </div>
+        <div class="block3">
+            <div class="seasons">
+                <h1 class="text2 text_2">Времена года!</h1>
+                <h3 class="motto2 motto_2">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</b></h3>
+                <div class="press_around2"><button class="press" type="submit">Играть!</button></div>
+            </div>
+            <div class="joystick1">
+                <img src="img2/123.svg" alt="">                
+            </div>
+        </div>
     </div>
-    <script src="./hw-2.js"></script>
-    <script src="./hw-3.js"></script>
-    <script src="./hw-4.js"></script>
+    <script src="./hw-5.js"></script>
 </body>
 </html>
