--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <div class="seasons">
                 <h1 class="text2 text_2">Времена года!</h1>
                 <h3 class="motto2 motto_2">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</b></h3>
-                <div class="press_around2"><button class="press" onclick="location.href='#'">Играть!</button></div>
+                <div class="press_around2">
+                    <button class="press" onclick="getSeason;">Играть!</button>
+                </div>
             </div>
             <div class="joystick1">
                 <img src="img2/123.svg" alt="">                
